--- a/hugo.toml
+++ b/hugo.toml
@@ -11,13 +11,13 @@ relativeURLs = true
 uglyURLs = true
 
 # Copyright
-copyright = "&copy;2024 MONDAY Flowers"
+copyright = "&copy;2024 Monday Flowers"
 
 [params]
 
 # Metadata for search engines and social sharing
-author = "MONDAY flowers"
-description = "A members only flower delivery and womens empowerment brand."
+author = "Monday Flowers"
+description = "subscription flower delivery."
 shareImage = "images/social.jpg"
 
 # Favicon
